--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,16 +1,14 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=2A9577B54F9545A804CD7F9205E9C7ED
-ProjectVersion=1.2.0.0
+Description=Get stuck in Stack’O’Bot, a small sandbox project that showcases a lean player controller, an expandable interaction system, and modular pieces you can build on. It also shows all the new features of Unreal Engine 5 in a practical vertical slice.
 ProjectName=Stack-O-Bot
-ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "6708ECA9483D3CE86CF1C69F0F9230E0", "Stack-O-Bot")
-Description="Get stuck in Stack’O’Bot, a small sandbox project that showcases a lean player controller, an expandable interaction system, and modular pieces you can build on. It also shows all the new features of Unreal Engine 5 in a practical vertical slice. "
+ProjectVersion=1.3.0.0
+CompanyName=Epic Games
 Homepage="https://www.epicgames.com/site/en-US/home"
 SupportContact="https://www.epicgames.com/help/en-US/"
-CompanyName=Epic Games
-LicensingTerms=
 CopyrightNotice=Unreal® Engine, Copyright 1998 – 2024 Epic Games, Inc. All rights reserved.
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "406FE63A4FC3E277C8D8FC8BD0008D71", "Stack-O-Bot")
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 BuildConfiguration=PPBC_Shipping
 ForDistribution=True
-
