--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,20 +5,20 @@ EditorStartupMap=/Game/Maps/MainWorld.MainWorld
 GameInstanceClass=/Game/Blueprints/Framework/GI_StackOBot.GI_StackOBot_C
 
 [/Script/Engine.RendererSettings]
+r.AllowStaticLighting=False
 r.GenerateMeshDistanceFields=True
 r.DynamicGlobalIlluminationMethod=1
 r.ReflectionMethod=1
-r.Shadow.Virtual.Enable=1
-r.VirtualTextures=True
-r.SupportSkyAtmosphereAffectsHeightFog=True
-r.SupportStationarySkylight=False
-r.AllowStaticLighting=False
-r.Lumen.TraceMeshSDFs=1
 r.SkinCache.CompileShaders=True
 r.RayTracing=True
-r.Lumen.HardwareRayTracing=True
-r.Lumen.HardwareRayTracing.LightingMode=2
+r.Shadow.Virtual.Enable=1
+r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
+r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
+r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
+r.Lumen.HardwareRayTracing.LightingMode=1
 r.Lumen.TranslucencyReflections.FrontLayer.EnableForProject=True
+r.Lumen.ScreenTracingSource=1
+r.VirtualTextures=True
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
