Updated the engine config to UE 5.5

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -68,9 +68,8 @@ bEnableConversionPrompt=False
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet
 
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/StackOBot")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/StackOBot")
-bUseFixedFrameRate=False
++ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/StackOBot")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/StackOBot")
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
