Updated the World Partition settings to UE 5.5 standards

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -63,9 +63,7 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
-bEnableWorldPartition=False
-bEnableConversionPrompt=False
-CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet
+CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/StackOBot")
