Added UserInterfaceSettings as per UE 5.5 standards

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -65,6 +65,11 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 
+[/Script/Engine.UserInterfaceSettings]
+bAuthorizeAutomaticWidgetVariableCreation=False
+FontDPIPreset=Standard
+FontDPI=72
+
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/StackOBot")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/StackOBot")
