--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -19,6 +19,7 @@ r.Lumen.HardwareRayTracing.LightingMode=1
 r.Lumen.TranslucencyReflections.FrontLayer.EnableForProject=True
 r.Lumen.ScreenTracingSource=1
 r.VirtualTextures=True
+r.Nanite.AllowSkinnedMeshes=1
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
